Add Approve Custom validator Updating messages.properties for usage in Manager's view

--- a/CATeam3LAPS/src/main/resources/messages.properties
+++ b/CATeam3LAPS/src/main/resources/messages.properties
@@ -20,3 +20,14 @@ caption.edit           = Edit
 caption.delete         = Delete
 caption.detail         = Detail
 caption.view		   = View
+
+fieldLabel.leaveID		= Leave ID
+fieldLabel.name			= Name
+fieldLabel.appliedDate	= AppliedDate
+fieldLabel.startDate	= LeaveStartDate
+fieldLabel.startTime	= LeaveStartTime
+fieldLabel.endDate		= LeaveEndDate
+fieldLabel.endTime		= LeaveEndTime
+fieldLabel.leaveType	= LeaveType
+fieldlabel.status		= Status 
+fieldlabel.leaveDetails	= Leave Details
