Fixed Approve validator and validation message to view. Thanks Manny and Gabriel!

--- a/CATeam3LAPS/src/main/resources/messages.properties
+++ b/CATeam3LAPS/src/main/resources/messages.properties
@@ -31,3 +31,5 @@ fieldLabel.endTime		= LeaveEndTime
 fieldLabel.leaveType	= LeaveType
 fieldlabel.status		= Status 
 fieldlabel.leaveDetails	= Leave Details
+
+error.emptyComment		= Empty Comment
