--- a/CATeam3LAPS/src/main/resources/messages.properties
+++ b/CATeam3LAPS/src/main/resources/messages.properties
@@ -33,3 +33,17 @@ fieldlabel.status		= Status
 fieldlabel.leaveDetails	= Leave Details
 
 error.emptyComment		= Empty Comment
+
+#ApplyLeaveValidator and OverseasLeaveDetailsValidator
+appliedDate = please put a right start day.
+leaveStartDay = The start day and end day  should be in chronologically increasing order.
+leavePeriodForManager = The leave period should not more than 18 days.
+isWeekdays = The start day and the end day should be both in weekdays.
+overseasTripContact = The contact information must be filled.
+leavePeriodForEmployee = The leave period should not more than 14 days.
+leavePeriodForMedicalLeave = The leave period should not more than 60 days.
+
+
+
+
+
